HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractDynamicAttribute/Expected.uv
//! Expected diagnostic metadata for the ContractDynamicAttribute rejected-source specimen.

expectedDiagnostic("E-CON-0410", "diag.15.ContractClauses")
